# src/main/java/io/renren/modules/pc/common/CommonController.java
@@ -4,8 +4,10 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import io.renren.common.utils.DateUtils;
 import io.renren.common.utils.ExcelUtil.ExcelReader;
 import io.renren.common.utils.R;
+import io.renren.modules.generator.entity.DljConfigureEntity;
 import io.renren.modules.generator.entity.DljIndustryDataEntity;
 import io.renren.modules.generator.entity.DljIndustryEntity;
+import io.renren.modules.generator.service.DljConfigureService;
 import io.renren.modules.generator.service.DljIndustryDataService;
 import io.renren.modules.generator.service.DljIndustryService;
 import io.renren.modules.pc.entity.LastYearEleConEntity;
@@ -27,15 +29,24 @@ public class CommonController {
 
     @Autowired
     private DljIndustryDataService service;
+    @Autowired
+    private DljConfigureService configService;
 
-    @RequestMapping("/savaDate")
+
+
+    //获取动态ip和端口
+    @RequestMapping("/getIpAndPort")
     public R getData(@RequestParam Map<String, Object> params){
-        String url = String.valueOf(params.get("url"));
-        String time = String.valueOf(params.get("time"));
-        List<DljIndustryDataEntity> list = ExcelReader.readExcel(url,time);
-        service.saveBatch(list);
-        return R.ok();
+        String url = String.valueOf(params.get("ipAndPort"));
+        QueryWrapper wrapper = new QueryWrapper();
+        List<DljConfigureEntity>list = configService.list(wrapper);
+        DljConfigureEntity entity = list.get(0);
+        String value = entity.getValue();
+        return R.ok().put("data",value);
     }
+
+
+
 
 
 
